--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </header>
   <main>
     <nav>
-      <a href="week1">Week 1</a>
+      <ul>
+        <li><a href="week1">Week 1</a> – Introductions</li>
+      </ul>
     </nav>
   </main>
   <footer>
