update homepage with dates

--- a/index.html
+++ b/index.html
@@ -15,14 +15,103 @@
     <h3>Section 02: Thursdays, 12:30pm – 3:20pm</h3>
   </header>
   <main>
-    <nav>
+    <nav class="session-nav">
       <ul>
-        <li><a href="week1">Week 1</a> – Introductions</li>
+        <li><a href="session1">Session 1</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 9/9</li>
+            <li>Section 01 (Monday): 9/13</li>
+          </ul>
+        </li>
+        <li><a href="session2">Session 2</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 9/16</li>
+            <li>Section 01 (Monday): 9/20</li>
+          </ul>
+        </li>
+        <li><a href="session3">Session 3</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 9/23</li>
+            <li>Section 01 (Monday): 9/27</li>
+          </ul>
+        </li>
+        <li><a href="session4">Session 4</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 9/30</li>
+            <li>Section 01 (Monday): 10/4</li>
+          </ul>
+        </li>
+        <li><a href="session5">Session 5</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 10/7</li>
+            <li>Section 01 (Monday): 10/11</li>
+          </ul>
+        </li>
+        <li><a href="session6">Session 6</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 10/14</li>
+            <li>Section 01 (Monday): 10/18</li>
+          </ul>
+        </li>
+        <li><a href="session7">Session 7</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 10/21</li>
+            <li>Section 01 (Monday): 10/25</li>
+          </ul>
+        </li>
+        <li><a href="session8">Session 8</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 10/28</li>
+            <li>Section 01 (Monday): 11/1</li>
+          </ul>
+        </li>
+        <li><a href="session9">Session 9</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 11/4</li>
+            <li>Section 01 (Monday): 11/8</li>
+          </ul>
+        </li>
+        <li><a href="session10">Session 10</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 11/11</li>
+            <li>Section 01 (Monday): 11/15</li>
+          </ul>
+        </li>
+        <li><a href="session11">Session 11</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 11/18</li>
+            <li>Section 01 (Monday): 11/22</li>
+          </ul>
+        </li>
+        <li><a href="session12">Session 12</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 11/25</li>
+            <li>Section 01 (Monday): 11/29</li>
+          </ul>
+        </li>
+        <li><a href="session13">Session 13</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 12/2</li>
+            <li>Section 01 (Monday): 9/27</li>
+          </ul>
+        </li>
+        <li><a href="session14">Session 14</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 9/30</li>
+            <li>Section 01 (Monday): 10/4</li>
+          </ul>
+        </li>
+        <li><a href="session15">Session 15</a> – Introductions
+          <ul>
+            <li>Section 02 (Thursday): 10/7</li>
+            <li>Section 01 (Monday): 10/11</li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </main>
   <footer>
-
+    
   </footer>
 </body>
 </html>
