--- a/scratch/github-test.html
+++ b/scratch/github-test.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    asdlkjhasdhfkhj
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
