--- a/assignments/geocities/index.html
+++ b/assignments/geocities/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Geocities Assignment</h1>
     <h2>cool!</h2>
+
+    <img src="images/bird6.jpg" alt="bird with red belly">
 </body>
 </html>
