add geocities pages

--- a/assignments/geocities/index.html
+++ b/assignments/geocities/index.html
@@ -11,6 +11,10 @@
     <h1>Geocities Assignment</h1>
     <h2>cool!</h2>
 
-    <img src="images/bird6.jpg" alt="bird with red belly">
+    <img src="images/giraffe1.jpg" alt="Two giraffes">
+
+    <video src="video/cat_walk_4.mp4" muted autoplay loop controls></video>
+
+    <audio src="audio/crystal_bowl.mp3" autoplay loop controls></audio>
 </body>
 </html>
