--- a/assignments/geocities/index.html
+++ b/assignments/geocities/index.html
@@ -11,10 +11,14 @@
     <h1>Geocities Assignment</h1>
     <h2>cool!</h2>
 
-    <img src="images/giraffe1.jpg" alt="Two giraffes">
+    <img src="images/hamster1.jpg" alt="hamster 1">
+    <img src="images/hamster2.jpg" alt="hamster 2">
 
-    <video src="video/cat_walk_4.mp4" muted autoplay loop controls></video>
+    <img src="gifs/black_cat_runs.gif" alt="black cat runs">
 
-    <audio src="audio/crystal_bowl.mp3" autoplay loop controls></audio>
+    <audio src="audio/crystal_bowl.mp3" loop controls></audio>
+
+    <video src="video/birds.mp4" controls loop autoplay muted></video>
+
 </body>
 </html>
