add loading stuff

--- a/assignments/css-basics/index.html
+++ b/assignments/css-basics/index.html
@@ -24,7 +24,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, quis sequi? Vero quod, nisi corrupti, eveniet illo tempore nihil aspernatur, a est repudiandae iste odio fugiat ipsa et itaque odit?</p>
         </section>
         <!-- Swap out the src below with a link to your own image -->
-        <img src="//picsum.photos/seed/200/600/300" alt="stock photo">
+        <img src="https://www.thesprucepets.com/thmb/sfuyyLvyUx636_Oq3Fw5_mt-PIc=/3760x2820/smart/filters:no_upscale()/adorable-white-pomeranian-puppy-spitz-921029690-5c8be25d46e0fb000172effe.jpg" alt="Tiny white floofy dog">
         <section>
             <h3>Section 2</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi nobis assumenda ea, vel omnis temporibus totam? Quaerat nisi illo consequatur aspernatur quae, possimus placeat sequi enim labore alias voluptas perspiciatis nulla velit. Corrupti unde magnam voluptate a quaerat tempora doloribus deserunt eveniet. Quis earum rem veritatis assumenda cumque quod architecto.</p>
