--- a/assignments/loading/index.html
+++ b/assignments/loading/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Loading...</title>
+    <title>Loading Hub Page</title>
 </head>
 <body>
-    <h1>Loading... Hub Page</h1>
+    <h1>Loading Assignment</h1>
 
     <nav>
-        <a href="loading.html">Loading Animation</a>
-        <a href="waiting.html">Waiting Animation</a>
+        <a href="loading.html">Loading...</a>
+        <a href="waiting.html">Waiting...</a>
     </nav>
 </body>
 </html>
