fix slide toggle

--- a/scratch/ftemp/index.html
+++ b/scratch/ftemp/index.html
@@ -12,8 +12,14 @@
   <div class="top-bar-container">
     <div class="top-bar">
       <a href="." class="logo">LOGO</a>
+      <nav id="top-menu" class="top-bar-menu">
+        <a href="#">Winter</a>
+        <a href="#">Spring</a>
+        <a href="#">Summer</a>
+        <a href="#">Fall</a>
+      </nav>
       <div class="top-bar-menu-container">
-        <nav class="top-bar-menu">
+        <nav id="slide-menu" class="top-bar-menu">
           <a href="#">Winter</a>
           <a href="#">Spring</a>
           <a href="#">Summer</a>
