--- a/scratch/ftemp/index.html
+++ b/scratch/ftemp/index.html
@@ -36,7 +36,7 @@
   <header class="hero-container">
     <div>
       <h1 class="hero-title">My Cool Website</h1>
-      <h2 class="hero-subtitle">It's pretty cool</h2>
+      <h2 class="hero-subtitle">Check it out</h2>
     </div>
   </header>
   <main>
