--- a/scratch/ftemp/index.html
+++ b/scratch/ftemp/index.html
@@ -33,12 +33,18 @@
       </a>
     </div>
   </div>
+
+  <!--Hero Container-->
+  <div class="hero-background"></div>
   <header class="hero-container">
+    
     <div>
       <h1 class="hero-title">My Cool Website</h1>
       <h2 class="hero-subtitle">Check it out</h2>
     </div>
   </header>
+
+  <!--Main Content-->
   <main>
     <div class="row">
       <div class="img-box">
@@ -71,9 +77,33 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magni sapiente placeat illo ut quisquam saepe quidem, natus asperiores quae, repellendus deserunt quo a vero labore voluptatibus fugit, ex praesentium totam. Reiciendis numquam nisi magni nulla obcaecati iusto eligendi a?</p>
       </section>
     </div>
+    <div class="info-card-container">
+      <div class="info-card">
+        <img src="images/hamster5-cutout.png" alt="hamster">
+        <h4 class="info-card-title">Cool</h4>
+        <p class="info-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At obcaecati, ex eum ipsa labore corrupti totam dolorum deleniti cupiditate illo.</p>
+      </div>
+      <div class="info-card">
+        <img src="images/hamster6-cutout.png" alt="hamster">
+        <h4 class="info-card-title">Nice</h4>
+        <p class="info-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quae impedit expedita quod praesentium iste laborum minus, ducimus vero sit.</p>
+      </div>
+      <div class="info-card">
+        <img src="images/hamster7-cutout.png" alt="hamster">
+        <h4 class="info-card-title">Great</h4>
+        <p class="info-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque molestias vel rem eligendi ipsam eveniet excepturi enim voluptatum optio quaerat.</p>
+      </div>
+    </div>
   </main>
-  <footer>
 
+  <!--Footer-->
+  <footer>
+    <nav class="social-menu">
+      <a href="#" class="social-icon"><img src="icons/instagram.svg" alt="Instagram icon"></a>
+      <a href="#" class="social-icon"><img src="icons/twitter.svg" alt="Twitter icon"></a>
+      <a href="#" class="social-icon"><img src="icons/linkedin.svg" alt="LinkedIn icon"></a>
+    </nav>
+    <div class="copyright">&copy; Doug Rosman 2021</div>
   </footer>
   
   <script src="main.js"></script>
