--- a/scratch/ftemp/index.html
+++ b/scratch/ftemp/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="lib/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="style.css">
-  <title>ftemp</title>
+  <title>Document</title>
 </head>
 <body>
   <div class="top-bar-container">
