update final project folder

--- a/assignments/final-project/about.html
+++ b/assignments/final-project/about.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Final Project - Home</title>
+    <title>Final Project - About</title>
 </head>
 <body>
     <header>
         <h1 class="site-title">Final Project</h1>
         <nav>
-            <a href="about.html">About</a>
+            <a class="special-link" href="index.html">Home</a>
         </nav>
-        <h2 class="page-title">Home</h2>
+        <h2 class="page-title">About</h2>
     </header>
-    
 </body>
 </html>
