update responsive gallery

--- a/assignments/final-project/about.html
+++ b/assignments/final-project/about.html
@@ -8,7 +8,7 @@
     <title>Final Project - About</title>
 </head>
 <body>
-    <header>
+    <header class="hero-container about-bg">
         <h1 class="site-title">Final Project</h1>
         <nav>
             <a class="special-link" href="index.html">Home</a>
