--- a/assignments/final-project/index.html
+++ b/assignments/final-project/index.html
@@ -8,7 +8,7 @@
     <title>Final Project - Home</title>
 </head>
 <body>
-    <header>
+    <header class="hero-container home-bg">
         <h1 class="site-title">Final Project</h1>
         <nav>
             <a href="about.html">About</a>
