--- a/assignments/responsive-gallery/index.html
+++ b/assignments/responsive-gallery/index.html
@@ -8,6 +8,28 @@
     <title>Responsive Gallery</title>
 </head>
 <body>
-   
+    <header>
+        <h1>Welcome to my website</h1>
+    </header>
+
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id voluptas, accusamus repudiandae, sint debitis dignissimos a laborum nulla in incidunt non eos velit adipisci maiores neque cum vel? Commodi.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui recusandae doloremque aspernatur voluptas harum ea perspiciatis inventore eos minima a. Iusto blanditiis quod dignissimos sequi assumenda voluptate deleniti commodi minus.</p>
+    
+        <div class="gallery">
+            <img src="images/bird1.jpg" alt="placeholder">
+            <img src="images/bird2.jpg" alt="placeholder">
+            <img src="images/bird3.jpg" alt="placeholder">
+            <img src="images/bird4.jpg" alt="placeholder">
+            <img src="images/bird12.jpg" alt="placeholder">
+            <img src="images/bird6.jpg" alt="placeholder">
+            <img src="images/bird7.jpg" alt="placeholder">
+            <img src="images/bird8.jpg" alt="placeholder">
+            <img src="images/bird9.jpg" alt="placeholder">
+            <img src="images/bird10.jpg" alt="placeholder">
+            <img src="images/bird10.jpg" alt="placeholder">
+        </div>
+    </main>
 </body>
 </html>
